# mayhap

./: README.md  TODO.md  mayhap.py  requirements.txt  setup.cfg  test.py
mayhap/: __main__.py  common.py  core.py  generator.py  main.py  modifiers.py  parse.py  rule.py  shell.py  tokens.py
samples/: simple.mh
samples/perchance/: README.md  minimal.mh  more_complex.mh  simple.mh
samples/perchance/tutorial/: README.md  animal_lists.mh  importing_and_exporting.mh  intro.mh  probability.mh  shorthand_lists.mh  storing_text-1.mh  storing_text-2.mh  unique_selections.mh
samples/tracery/: README.md  modifiers.mh  nesting_stories.mh  rules_within_rules.mh  saving_data.mh  super_advanced.mh
test/: test_generate.py  test_grammar.py  test_rule.py  test_samples.sh
