[metadata]
name = mayhap
version = 0.0.1
author = Aaron Friesen
author_email = maugrift@maugrift.com
description = A grammar-based random text generator, inspired by Perchance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Maugrift/mayhap
license = GNU Lesser General Public License v3 or later (LGPLv3+)
classifiers =
	License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = True
packages = mayhap
install_requires =
	inflect
	pyparsing
python_requires = >=3.10

[options.entry_points]
console_scripts =
	mayhap = mayhap.core:main
